<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enzoruiz.puppyproject.ContactoActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_nombre"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_mensaje"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bEnviarComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_enviarComentario"/>

</LinearLayout>
