<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enzoruiz.puppyproject.Acercade"
    android:orientation="vertical">

    <include layout="@layout/actionbar"
        android:id="@+id/toolbar"/>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="@dimen/tamaño_foto"
        android:layout_height="@dimen/tamaño_foto"
        android:src="@drawable/developer_foto"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="#3bd9ea"
        android:layout_marginTop="@dimen/default_margen"/>

    <TextView
        android:id="@+id/tvNombreDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_nombreDeveloper"
        android:textSize="@dimen/tamaño_letra_acercade"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/default_margen"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvEspecialidadDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_especialidadDeveloper"
        android:textSize="@dimen/tamaño_letra_acercade"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/default_margen"/>

    <TextView
        android:id="@+id/tvEmailDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_emailDeveloper"
        android:textSize="@dimen/tamaño_letra_acercade"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/default_margen"/>

</LinearLayout>
